--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My osu skins | Krappe</title>
+    <title>Krappe's website</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="js.js"></script>
+    <link rel="icon" href="KrappeComfy.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Mis Skins de osu!</h1>
-    <ul>
-        <li><a href="skin1.osk">Skin 1</a></li>
-        <li><a href="skin2.osk">Skin 2</a></li>
-        <!-- Agrega más skins según sea necesario -->
-    </ul>
+    <div id="video-background">
+        <video autoplay loop muted>
+            <source src="video.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div id="overlay"></div>
+    <div id="content">
+        <h1 id="title">Krappe</h1>
+        <p id="welcome">this is just a test, hello!</p>
+        <div id="portfolio-button">
+            <a href="skins/skins.html" id="botonPort">Check out my skin folder</a>
+        </div>
+        <div id="social-icons">
+            <a href="https://www.youtube.com/krappe0" class="youtube" target="_blank"></a>
+            <a href="https://twitter.com/krappe0" class="twitter" target="_blank"></a>
+            <a href="https://www.twitch.tv/krappe" class="twitch" target="_blank"></a>
+            <a href="https://www.discord.gg/krappe" class="discord" target="_blank"></a>
+            <a href="https://www.instagram.com/krappe0" class="instagram" target="_blank"></a>
+        </div>
+    </div>
 </body>
+
 </html>
